examples/test/testpolicy15927.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15927
  namespace: namespace169
spec:
  podSelector:
    matchLabels:
      key21: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value11
          key14: value40
      podSelector:
        matchLabels:
          key3: value22
          key40: value35
          key10: value48
